--- a/app/views/party/parties/edit.html.erb
+++ b/app/views/party/parties/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="p-6">
-  <h1 class="text-2xl font-bold mb-4">Edit Party</h1>
-  <%= render "form", party: @party %>
-</div>
+<!-- app/views/party/addresses/edit.html.erb -->
+<turbo-frame id="comm_modal_frame">
+  <%= render "form" %>
+</turbo-frame>
