--- a/app/views/party/parties/_form.html.erb
+++ b/app/views/party/parties/_form.html.erb
@@ -37,20 +37,71 @@
                 class: "select select-bordered w-full max-w-xs",
                 data: { party_type_target: "select", action: "change->party-type#change" } %>
         </div>
+        
+        <div class="md:col-span-2">
+          <div class="flex items-center justify-between">
+            <label class="label"><span class="label-text">Identifiers</span></label>
+            <%= button_tag "Add identifier", name: :add_identifier, value: "1", class: "btn btn-ghost btn-xs" %>
+          </div>
 
-        <div>
-          <label class="label"><span class="label-text"><%= @party.organization ? "EIN" : "SSN" %></span></label>
-          <% idrec = @party.primary_tax_id || @party.identifiers.build(id_type_code: (@party.organization ? "ein" : "ssn"), is_primary: true) %>
-          <%= f.fields_for :identifiers, idrec do |idf| %>
-            <%= idf.hidden_field :id %>
-            <%= idf.hidden_field :id_type_code %>
-            <%= idf.hidden_field :is_primary, value: true %>
-            <%= idf.password_field :value,
-                  autocomplete: "off", inputmode: "numeric",
-                  class: "input input-bordered w-full",
-                  placeholder: (@party.organization ? "••-•••••••" : "•••-••-••••") %>
+          <% # ensure at least one primary tax-id row exists for the current party type %>
+          <% if @party.identifiers.tax_ids.where(is_primary: true).blank? %>
+            <% @party.identifiers.build(id_type_code: (@party.organization ? "ein" : "ssn"), is_primary: true) %>
           <% end %>
-          <p class="text-xs opacity-70 mt-1">Encrypted at rest. Leave blank to keep existing.</p>
+
+          <ul class="space-y-3">
+            <% @party.identifiers.each do |pi| %>
+              <li class="border rounded-box p-3">
+                <%= f.fields_for :identifiers, pi do |idf| %>
+                  <%= idf.hidden_field :id %>
+                  <div class="grid md:grid-cols-6 gap-3">
+                    <div>
+                      <%= idf.label :id_type_code, "Type", class: "label-text" %>
+                      <%= idf.select :id_type_code,
+                            options_for_select(%w[ssn itin ein foreign_tin passport dl lei], idf.object.id_type_code),
+                            {}, class: "select select-bordered w-full" %>
+                    </div>
+                    <div class="md:col-span-2">
+                      <%= idf.label :value, "Identifier", class: "label-text" %>
+                      <%= idf.password_field :value, autocomplete:"off", class:"input input-bordered w-full",
+                            placeholder:"enter value to set or change" %>
+                    </div>
+                    <div>
+                      <%= idf.label :country_code, "Issuer country", class:"label-text" %>
+                      <%= idf.text_field :country_code, class:"input input-bordered w-full", placeholder:"US" %>
+                    </div>
+                    <div>
+                      <%= idf.label :issuing_authority, "Issuer", class:"label-text" %>
+                      <%= idf.text_field :issuing_authority, class:"input input-bordered w-full" %>
+                    </div>
+                    <div class="md:col-span-2 grid grid-cols-2 gap-3">
+                      <div>
+                        <%= idf.label :issued_on, class:"label-text" %>
+                        <%= idf.date_field :issued_on, class:"input input-bordered w-full" %>
+                      </div>
+                      <div>
+                        <%= idf.label :expires_on, class:"label-text" %>
+                        <%= idf.date_field :expires_on, class:"input input-bordered w-full" %>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="mt-3 flex items-center gap-4">
+                    <label class="label cursor-pointer gap-2">
+                      <%= idf.check_box :is_primary, class:"checkbox" %><span class="label-text">Primary</span>
+                    </label>
+                    <label class="label cursor-pointer gap-2">
+                      <%= idf.check_box :_destroy, class:"checkbox" %><span class="label-text">Remove</span>
+                    </label>
+                  </div>
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
+
+          <p class="text-xs opacity-70 mt-2">Encrypted at rest. Leave value blank to keep existing.</p>
+        </div>
+
         </div>
 
         <fieldset class="<%= @party.party_type=='organization' ? 'hidden' : '' %> md:col-span-2"
